Fix icons being misaligned

--- a/template/resume.scss
+++ b/template/resume.scss
@@ -30,6 +30,7 @@ a:link, a:visited {
 .icon > svg {
 	fill: currentColor;
 	height: 1em;
+	vertical-align: middle;
 }
 
 
